--- a/Moveonthing/Agileproject/MOT/templates/agile.html
+++ b/Moveonthing/Agileproject/MOT/templates/agile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stytesheet" href="agile.css">
+    <script src="agile.js"></script>
     <title>Agile team</title>
 </head>
 <body>
