--- a/Moveonthing/Agileproject/MOT/templates/agile.html
+++ b/Moveonthing/Agileproject/MOT/templates/agile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stytesheet" href="agile.css">
     <script src="agile.js"></script>
-    <title>Agile team</title>
+    <title>System Point Management</title>
 </head>
 <body>
     <p> Hello My Team</p>
