--- a/Moveonthing/Agileproject/MOT/templates/login.html
+++ b/Moveonthing/Agileproject/MOT/templates/login.html
@@ -45,7 +45,7 @@
                         <div>
                             <input type="checkbox" name="" id="" style="float: left;">
                             <span>Ghi nhớ lần đăng nhập sau</span>
-                            <button class ="button-as" type="button" onclick="none">Đăng nhập</button>
+                            <button class ="button-as" type="button" onclick="">Đăng nhập</button>
                         </div>
                     </form>                    
                 </div>
