--- a/Moveonthing/Agileproject/MOT/static/login.css
+++ b/Moveonthing/Agileproject/MOT/static/login.css
@@ -97,12 +97,11 @@ input
     font-size: 15px;
     font-family: 'Noto Serif Display';
 }
-.button-as {
+.button-as{
+    display: inline;
     background-color: #4b3cad;
-    display: none;
     border-radius: 4px;
     box-shadow:0 5px 0 black;
-    color: #fff;
     transition: cubic-bezier(0.47, 0, 0.745, 0.715);
 }
 .button-as:active{
