--- a/Moveonthing/Agileproject/MOT/templates/login.html
+++ b/Moveonthing/Agileproject/MOT/templates/login.html
@@ -22,15 +22,15 @@
             <div class="pop-up">
                 <div class="check-role">
                     <div class="check-role-item">
-                        <input type="radio">
+                        <input type="radio" name="check">
                         <span><b>Sinh viên</b></span>
                     </div>
-                    <div class="check-role-item">
-                        <input type="radio">
+                    <div class="check-role-item" >
+                        <input type="radio" name="check">
                         <span><b>Giáo viên</b></span>
                     </div>
                     <div class="check-role-item">
-                        <input type="radio">
+                        <input type="radio" name="check">
                         <span><b>Phòng giáo vụ</b></span>
                     </div>
                 </div>
