STUD-9:Update Html/css

--- a/Moveonthing/Agileproject/MOT/static/forgotPassword.css
+++ b/Moveonthing/Agileproject/MOT/static/forgotPassword.css
@@ -1,16 +1,28 @@
 .container{
-    flex:1
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
 }
-.container-header{
-   background:Linear-gradient(#e45f5f,#4b3cad);
-    border: 1px solid black;
-    height:200px;
-    width: 100%;
-}
-.text-header{
-    color:aliceblue;
+.header {
+    background-image: linear-gradient(to right, #e45f5f, #4b3cad);
+    color: white;
     text-align: center;
-    font-size: 20;
+    position: relative;
+    align-content: space-around;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 20vh;
+}
+.screen-20
+{
+    position: relative;;
+    height: 20vh;
+}
+.header span {
+    display: block;
+    font-size: 25px;
     font-family: 'Noto Serif Display';
 }
 p{
