--- a/Moveonthing/Agileproject/MOT/templates/forgotPassword.html
+++ b/Moveonthing/Agileproject/MOT/templates/forgotPassword.html
@@ -12,17 +12,19 @@
 </head>
 <body class='container'>
 <!--Header-->
-<div class='container-header'>
-    <h3 class='text-header'>TRƯỜNG ĐẠI HỌC ABC</h3>
-    <p>Số 280 An Dương Vương, phường 4, quận 5, TP.HCM</p>
-    <p>Điện thoại: 0123456789</p>
+<div class="screen-20">
+    <div class="header">
+        <span><b>TRƯỜNG ĐẠI HỌC ABC</b></span>
+        <span style="font-size: medium;"><b>Số 280 An Dương Vương, phường 4, quận 5, TP.HCM</b></span>
+        <span style="font-size: medium;"><b>Điện thoại: 0123456789</b></span>
+    </div>
 </div>
 <!--Body-->
 <div class='container-body'>
     <div class='main-form'>
         <h2>Forgot Password</h2>
         <form id='form1' method="POST">
-            <input type='text' id="masv" name="masv" class="form-input"  placeholder="Mã Số Sinh Viên"><br>
+            <input type='text' id="username" name="username" class="form-input"  placeholder="Tên Đăng Nhập"><br>
             <span class="form-message"></span>
         </form>
         <div>
@@ -32,13 +34,13 @@
 </div>  
 <!--script-->
 <script>
-    document.getElementById("masv").addEventListener("input", function() {
+    document.getElementById("username").addEventListener("input", function() {
         hideErrorMessage();
     });
     
     function displayErrorMessage() {
         var message = document.querySelector(".form-message");
-        message.innerText = "Vui lòng nhập Mã Số Sinh Viên";
+        message.innerText = "Vui lòng nhập Tên Đăng Nhập";
         message.style.color = "red";
     }
     
@@ -48,11 +50,11 @@
     }
     
     function checkAndRedirect() {
-        var masv = document.getElementById("masv").value;
+        var masv = document.getElementById("username").value;
         var message = document.querySelector(".form-message");
     
         if (masv.trim() === "") {
-            message.innerText = "Vui lòng nhập Mã Số Sinh Viên";
+            message.innerText = "Vui lòng nhập Tên Đăng Nhập";
             message.style.color = "red";
             return false;
         } else {
