--- a/Moveonthing/Agileproject/MOT/templates/resetPassword.html
+++ b/Moveonthing/Agileproject/MOT/templates/resetPassword.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="{% static 'templates/forgotPassword.css' %}" rel="stylesheet"/>
+        <link href="static/forgotPassword.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -14,10 +14,12 @@
     </head>
     <body class='container'>
         <!--Header-->
-        <div class='container-header'>
-            <h3 class='text-header'>TRƯỜNG ĐẠI HỌC ABC</h3>
-           <p>Số 280 An Dương Vương, phường 4, quận 5, TP.HCM</p>
-           <p> Điện thoại: 0123456789</p>
+        <div class="screen-20">
+            <div class="header">
+                <span><b>TRƯỜNG ĐẠI HỌC ABC</b></span>
+                <span style="font-size: medium;"><b>Số 280 An Dương Vương, phường 4, quận 5, TP.HCM</b></span>
+                <span style="font-size: medium;"><b>Điện thoại: 0123456789</b></span>
+            </div>
         </div>
         <!--Body-->
         <div class='container-body'>
@@ -103,4 +105,5 @@
                  }
             }
         </script>
+    </body>
 </html>
