Fix-login-feature

--- a/Moveonthing/Agileproject/MOT/templates/homepage.html
+++ b/Moveonthing/Agileproject/MOT/templates/homepage.html
@@ -23,6 +23,8 @@
         <a href=""><i class="fa fa-file-text"></i> Kết quả tốt nghiệp</a>
         <a href="{% url 'Agile' %}"><i class="fa fa-sign-out"></i> Đăng xuất</a>
     </div>
-    <div class="content"></div>
+    <div class="content">
+        
+    </div>
 </body>
 </html>
