--- a/Moveonthing/Agileproject/MOT/templates/homepage.html
+++ b/Moveonthing/Agileproject/MOT/templates/homepage.html
@@ -21,7 +21,7 @@
         <a href="#"><i class="fa fa-user"></i> Sinh viên</a>
         <a href="#"><i class="fa fa-book"></i> Tổ chức thi</a>
         <a href=""><i class="fa fa-file-text"></i> Kết quả tốt nghiệp</a>
-        <a href="{% url 'Agile' %}"><i class="fa fa-sign-out"></i> Đăng xuất</a>
+        <a href="{% url 'Logout' %}"><i class="fa fa-sign-out"></i> Đăng xuất</a>
     </div>
     <div class="content">
         
