--- a/Moveonthing/Agileproject/MOT/templates/login.html
+++ b/Moveonthing/Agileproject/MOT/templates/login.html
@@ -36,17 +36,19 @@
                         </div>
                     </div>
                     <div class="form-login">
-                        {% csrf_token %}
-                        <label for="username">Tên đăng nhập:</label>
-                        <input type="text" name="username" id="username" placeholder="Tên đăng nhập">
-                        <br>
-                        <label for="password">Mật khẩu:</label>
-                        <input type="password" name="password" id="password" placeholder="Mật khẩu">
-                        <br>
-                        <div>
-                            <input type="checkbox" name="remember" id="remember" style="float: left;">
-                            <span>Ghi nhớ lần đăng nhập sau</span>
-                            <button class="button-as" type="submit">Đăng nhập</button>
+                        <div class="form-login-inside">
+                            {% csrf_token %}
+                            <label for="username">Tên đăng nhập:</label>
+                            <input type="text" name="username" id="username" placeholder="Tên đăng nhập">
+                            <br>
+                            <label for="password">Mật khẩu:</label>
+                            <input type="password" name="password" id="password" placeholder="Mật khẩu">
+                            <br>
+                            <div>
+                                <input type="checkbox" name="remember" id="remember" style="float: left;">
+                                <span>Ghi nhớ lần đăng nhập sau</span>
+                                <button class="button-as" type="submit">Đăng nhập</button>
+                            </div>
                         </div>
                     </div>
                 </form>
