STUD-9: complete forgot password page

--- a/Moveonthing/Agileproject/MOT/static/forgotPassword.css
+++ b/Moveonthing/Agileproject/MOT/static/forgotPassword.css
@@ -30,23 +30,32 @@ p{
     color: aliceblue;
     font-size: 15;
 }
-.container-body{
-    display: flex;
-    justify-content: center;
-    padding:20px;
-    align-items: center;
-    height: calc(100vh - 150px); 
-
+a{
+    text-decoration: none;
+    color:aliceblue ;
 }
-.main-form{
+.container-body {
+    display: flex;
+    justify-content: center; /* Horizontally centers the child elements */
+    align-items: center;     /* Vertically centers the child elements */
+    padding: 20px;
+    height: calc(100vh - 150px);
+}
+.main-form {
     border: 1px solid white;
-    box-shadow:1px 1px 1px 1px rgb(137, 136, 136);
-    height:350px;
+    box-shadow: 1px 1px 1px 1px rgb(137, 136, 136);
+    height: 400px;
     width: 500px;
+    display: flex;          
+    flex-direction: column; 
+    justify-content: center; 
 }
 .main-form h2{
     text-align:center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:bold;
+    font-size: 20;
+    margin-bottom: 5px;
 }
 #form1{
     width:80%; 
@@ -63,27 +72,33 @@ p{
     font-weight: bold;
     margin-left: 20px;
 }
-.form-input{
-    width:80%;
-    padding: 10px;
-    height:16%; 
-    margin-bottom: 5px; 
-    margin-top: 25px;
-    margin-left: 40px;
-    box-sizing: border-box;
+.form-input {
+    width: 80%;
+    padding: 20px;
+    margin: 10px 0px 0px 30px;   /* Auto left-right margin for centering */
     border-radius: 10px;
 }
-
-.button-resetpw{
-    width:65%;
-    height:16%;
+.button-forgotpw{
+    width: 80%;         
+    height: 40%;
     border-radius: 10px;
-    margin-left: 85px;
-    margin-top: 20px;
+    margin: 20px 0px 0px 30px;  
     background: #1877f2;
     border-color: azure;
-    color:aliceblue;
-    font-weight:bold;
+    color: aliceblue;
+    font-weight: bold;
+    text-align: center;
+}
+.button-resetpw {
+    width: 80%;         
+    height: 30%;
+    border-radius: 10px;
+    margin: 10px 0px 0px 30px;  
+    background: #1877f2;
+    border-color: azure;
+    color: aliceblue;
+    font-weight: bold;
+    text-align: center;
 }
 
 html, body, div, span, applet, object, iframe,
