--- a/Moveonthing/Agileproject/MOT/templates/forgotPassword.html
+++ b/Moveonthing/Agileproject/MOT/templates/forgotPassword.html
@@ -22,46 +22,19 @@
 <!--Body-->
 <div class='container-body'>
     <div class='main-form'>
-        <h2>Forgot Password</h2>
-        <form id='form1' method="POST">
-            <input type='text' id="username" name="username" class="form-input"  placeholder="Tên Đăng Nhập"><br>
-            <span class="form-message"></span>
-        </form>
-        <div>
-            <button class='button-resetpw' onclick="checkAndRedirect()">Reset Password</button>
-        </div>
-    </div>
+         <h2>Forgot Password</h2>
+         <form id='form1' method='POST'>
+            {% csrf_token %}
+             <div>
+                 <input type='text' name="username" class="form-input" id='username' placeholder="Nhập Tên Đăng Nhập">
+                 <span class="form-message"></span>
+                 <button class='button-forgotpw' type="submit">Send</button>
+                 <button class='button-forgotpw'><a href="{% url 'Logout' %}">Back</a></button>
+            </div>     
+       </form>
+   </div>
 </div>  
 <!--script-->
-<script>
-    document.getElementById("username").addEventListener("input", function() {
-        hideErrorMessage();
-    });
-    
-    function displayErrorMessage() {
-        var message = document.querySelector(".form-message");
-        message.innerText = "Vui lòng nhập Tên Đăng Nhập";
-        message.style.color = "red";
-    }
-    
-    function hideErrorMessage() {
-        var message = document.querySelector(".form-message");
-        message.innerText = "";
-    }
-    
-    function checkAndRedirect() {
-        var masv = document.getElementById("username").value;
-        var message = document.querySelector(".form-message");
-    
-        if (masv.trim() === "") {
-            message.innerText = "Vui lòng nhập Tên Đăng Nhập";
-            message.style.color = "red";
-            return false;
-        } else {
-            window.location.href = "resetPassword.html";
-            return true;
-        }
-    }
-</script>
+
 </body>
 </html>
