--- a/Moveonthing/Agileproject/MOT/templates/login.html
+++ b/Moveonthing/Agileproject/MOT/templates/login.html
@@ -46,7 +46,8 @@
                             <br>
                             <div>
                                 <input type="checkbox" name="remember" id="remember" style="float: left;">
-                                <span>Ghi nhớ lần đăng nhập sau</span>
+                                <span>Ghi nhớ lần đăng nhập sau</span> <br>
+                                <span><a href="{%url 'Forgot'%}">Quên mật khẩu ?</a></span>
                                 <button class="button-as" type="submit">Đăng nhập</button>
                             </div>
                         </div>
