--- a/Moveonthing/Agileproject/MOT/templates/resetPassword.html
+++ b/Moveonthing/Agileproject/MOT/templates/resetPassword.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Reset Password</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="static/forgotPassword.css" rel="stylesheet"/>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -25,26 +24,29 @@
         <div class='container-body'>
            <div class='main-form'>
                 <h2>Reset Password</h2>
-                <form id='form1' method='get'>
+                <form id='form1' method='POST'>
+                    {% csrf_token %}
                     <div>
-                         <input type='password'  name="password" class="form-input" id='password' placeholder="Nhập mật khẩu" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"><br>
+                        <!-- First password input field -->
+                        <input type='password' name="password" class="form-input" id='password' placeholder="Nhập mật khẩu" pattern="^(?=.*[!@#$%^&*]).{7,}$">
+                        <input type='password' name="confirm-pw" class="form-input" id='confirm-pw' placeholder="Nhập lại mật khẩu">
+                        <!-- Reset password button -->
+                        <button class='button-resetpw' type="submit">Reset Password</button>
                     </div>
-                    <span class="form-message"></span>
-                    <div>
-                        <input type='password'  name="confirm-pw" class="form-input" id='confirm-pw' placeholder="Nhập lại mật khẩu"
-                        onfocus="displayErrorMessage_confirmPW()"
-                        onblur="checkPasswordMatch()" ><br>
+                    <div class="form-message">
+                        <!-- Thông báo lỗi -->
+                        {% if messages %}
+                            {% for message in messages %}
+                                <p>{{ message }}</p>
+                            {% endfor %}
+                        {% endif %}
                     </div>
-                    <span class="confirm-message"></span>
                 </form>
-                <div>
-                    <button class='button-resetpw' onclick="checkAndDirect()">Reset Password</button>
-               </div>
-           </div>
-              
         </div>
+              
+       
         <!--Script-->
-        <script>
+        {% comment %} <script>
             document.getElementById("password").addEventListener("input", function() {
                 hideErrorMessage();
             });
@@ -95,15 +97,6 @@
                     $('.confirm-message').text('Mật khẩu nhập lại không khớp');
                 }
             }
-            function checkAndDirect(){
-                var password = $('#password').val();
-                var confirmPassword = $('#confirm-pw').val();
-                 if(password.trim()==="" || confirmPassword.trim()===""){
-                    return false;
-                 } else {
-                    <a href=''></a>
-                 }
-            }
-        </script>
+        </script> {% endcomment %}
     </body>
 </html>
